2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* ui/phonemgr.glade: Make the icons used named icons, instead of
	the stock ones. The stock icons didn't get themed, and didn't
	load if GNOME and gnome-phone-manager were installed in different
	prefixes. Remove "gnome" requires from the file as well
	(Closes: #495229)

2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Big patch from Pawel Kot
	<gnokii@gmail.com> to add all the phones from gnokii
	to the phones.xml file (Closes: #454825)

2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Fix the text we send not being echo'ed back in the UI

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Init the i18n functions

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Don't escape the data coming from telepathy itself

	* telepathy/main.c: (main): And init i18n

	* libgsm/Makefile.am:
	* libgsm/glibgsmtest.c: (main): more i18n

	* libgsm/phonemgr-listener.c: (phonemgr_listener_poll): add some
	accents to the test messages sent

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/sms.profile: Add a profile file for empathy, to be
	copied to /usr/share/mission-control/profiles/ (doesn't actually work)

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/*: Rename the backend "Phoney", as in "phone", haha,
	and add the telepathy manager file, as well as the D-Bus service
	file, so it gets autostarted and discovered properly

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (phonemgr_utils_address_is),
	(phonemgr_utils_get_channel), (phonemgr_utils_tell_driver),
	(phonemgr_utils_write_gnokii_config),
	(phonemgr_utils_connection_is_supported):
	Add support for DKU2 in --config and --identify, check better
	for Bluetooth addresses using bachk, remove support for DKU2
	in kernel driver mode
	* libgsm/phones.xml: Add the 6230i to the list, as used in
	the Nokia 6230i in DKU2 mode
